--- a/kubernetes/mongo-secrets.yaml
+++ b/kubernetes/mongo-secrets.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata: 
   name: mongo-sec
+  namespace: three-tier
 type: Opaque
 data:  
   password: cGFzc3dvcmQxMjM=   #Three-Tier-Project
